--- a/RA.Rmd
+++ b/RA.Rmd
@@ -1845,7 +1845,8 @@ flights |>
 -It seemingly the higher previous_hours_delay would cause higher average flight delay for an hour.
 
 7.Look at each destination. Can you find flights that are suspiciously fast (i.e. flights that represent a potential data entry error)? Compute the air time of a flight relative to the shortest flight to that destination. Which flights were most delayed in the air?
-```{r}
+
+```{r, include = FALSE, eval = FALSE}
 #Find the shortest flight to each destination
 shortest_flight <- flights |>
   group_by(dest) |>
@@ -1858,7 +1859,7 @@ shortest_flight <- flights |>
   select(dest, shortest_time, air_time, diff_from_mean, diff_from_short, tailnum)
 #Compute the air time of a flight relative to the shortest flight to that destination.
 flights |>
-  left_join(shortest_flight, by = "dest") |> 
+  left_join(shortest_flight, by = "dest") #|> 
   mutate(relative_air_time = air_time / shortest_time) |>
   arrange(desc(relative_air_time)) |>
   head(10)
@@ -2766,9 +2767,16 @@ make_datetime_100 <- function(year, month, day, time) {
   make_datetime(year, month, day, time %/% 100, time %% 100)
 }
 
+str(flights$year)
+str(flights$month)
+str(flights$day)
+str(flights$dep_time)
+
 flights_dt <- flights |> 
   filter(!is.na(dep_time), !is.na(arr_time)) |> 
   mutate(
+    dep_time = as.integer(dep_time),
+    arr_time = as.integer(arr_time),
     dep_time = make_datetime_100(year, month, day, dep_time),
     arr_time = make_datetime_100(year, month, day, arr_time),
     sched_dep_time = make_datetime_100(year, month, day, sched_dep_time),
@@ -2783,10 +2791,11 @@ flights_dt
 #Plot
 flights_dt |>
   filter(!is.na(dep_time)) |>
-  mutate(dep_hour = update(dep_time, yday = 1)) |>
-  mutate(month = factor(month(dep_time))) |>
-  ggplot(aes(dep_hour, group = month, color = month))+
-  geom_freqpoly(binwidth = 2000 * 2000)
+  mutate(dep_day_of_year = yday(dep_time)) |>
+  group_by(dep_day_of_year) |>
+  summarize(y = mean(air_time, na.rm = TRUE)) |>
+  ggplot(aes(x = dep_day_of_year, y = y))+
+  geom_bar(stat = "identity")
 ```
 
 2.Compare dep_time, sched_dep_time and dep_delay. Are they consistent? Explain your findings.
@@ -2924,6 +2933,8 @@ howold(ymd(19980419))
 4.Why can’t (today() %--% (today() + years(1))) / months(1) work? (?)
 
 ```{r}
+(today() %--% (today() + years(1))) / months(1)
+
 (today() %--% (today() + years(1))) / months(1)
 ```
 
